# arty

./: .clang-format  .devcontainer.json  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_noop  README.md  log.txt  raw_sensors_20260307_095207.csv  ruff.toml  west.yml
bees/: CMakeLists.txt  README.md  prj.conf
bees/src/: CMakeLists.txt  main.cpp
clover/: CMakeLists.txt  Kconfig  README.md  chrony.conf  prj.conf  sample.yaml  testcases.yaml
clover/src/: AbortState.cpp  AbortState.h  AnalogSensors.cpp  AnalogSensors.h  BlinkLed.cpp  BlinkLed.h  CMakeLists.txt  CalibrationState.cpp  CalibrationState.h  ClosedLoopState.cpp  ClosedLoopState.h  Controller.cpp  Controller.h  ControllerConfig.h  Error.cpp  Error.h  FlightController.cpp  FlightController.h  IdleState.cpp  IdleState.h  Lidar.cpp  Lidar.h  LookupTable.cpp  LookupTable.h  LookupTable1D.h  LookupTable2D.h  MaxLengthString.h  MutexGuard.cpp  MutexGuard.h  PID.h  PWMServo.cpp  PWMServo.h  PwmActuator.cpp  PwmActuator.h  SequenceState.cpp  SequenceState.h  State.h  StateAbort.cpp  StateAbort.h  StateCalibrateValve.cpp  (+49 more)
clover/src/flight/: CMakeLists.txt  FlightController.cpp  FlightController.h  FlightStateAbort.cpp  FlightStateAbort.h  FlightStateFlightSeq.cpp  FlightStateFlightSeq.h  FlightStateIdle.cpp  FlightStateIdle.h  FlightStateLanding.cpp  FlightStateLanding.h  FlightStateOff.cpp  FlightStateOff.h  FlightStateTakeoff.cpp  FlightStateTakeoff.h  PID.h  StateEstimator.cpp  StateEstimator.h  math.h  math_util.h
clover/src/guards/: SocketGuard.cpp  SocketGuard.h
clover/src/hornet/: CMakeLists.txt  HornetRcs.cpp  HornetRcs.h  HornetThrottle.cpp  HornetThrottle.h  HornetTvc.cpp  HornetTvc.h  PwmActuator.cpp  PwmActuator.h  RCSHornetActuator.cpp  RCSHornetActuator.h  RCSHornetModule.cpp  RCSHornetModule.h  TVCHornetActuator.cpp  TVCHornetActuator.h  TVCHornetModule.cpp  TVCHornetModule.h  ThrottleHornetActuator.cpp  ThrottleHornetActuator.h  ThrottleHornetModule.cpp  ThrottleHornetModule.h
clover/src/lut/: cea_lut.h  tc_k_type_v_to_deg_c_lut.h  tc_t_type_v_to_deg_c_lut.h  thrust_to_fuel.h  thrust_to_fuel_1.5.h  thrust_to_lox.h  thrust_to_lox_1.5.h  thrust_to_lox_15.h
clover/src/ranger/: CMakeLists.txt  Moteus.h  RCSRangerActuator.cpp  RCSRangerActuator.h  RCSRangerModule.cpp  RCSRangerModule.h  RangerRcs.cpp  RangerRcs.h  RangerThrottle.cpp  RangerThrottle.h  RangerTvc.cpp  RangerTvc.h  TVCRangerActuator.cpp  TVCRangerActuator.h  TVCRangerModule.cpp  TVCRangerModule.h  ThrottleRangerActuator.cpp  ThrottleRangerActuator.h  ThrottleRangerModule.cpp  ThrottleRangerModule.h  ThrottleValve.cpp  ThrottleValve.h  Valves.cpp  Valves.h  moteus_multiplex.h
clover/src/rcs/: CMakeLists.txt  RCSController.cpp  RCSController.h  RCSStateAbort.cpp  RCSStateAbort.h  RCSStateFlight.cpp  RCSStateFlight.h  RCSStateIdle.cpp  RCSStateIdle.h  RCSStateRollSeq.cpp  RCSStateRollSeq.h  RCSStateValveSeq.cpp  RCSStateValveSeq.h  StateAbort.cpp  StateAbort.h  StateIdle.cpp  StateRollSeq.cpp  StateValveSeq.cpp
clover/src/sensors/: AnalogSensors.cpp  AnalogSensors.h  CMakeLists.txt  Gnss.cpp  Gnss.h  Lidar.cpp  Lidar.h  VectornavIMU.cpp  VectornavIMU.h  adc_ads7953.cpp  adc_ads7953.h  gnss.cpp  gnss.h  lidar.cpp
clover/src/throttle/: CMakeLists.txt  StateAbort.cpp  StateAbort.h  StateCalibrateValve.cpp  StateCalibrateValve.h  StateIdle.cpp  StateIdle.h  StateThrustSeq.cpp  StateThrustSeq.h  StateValveSeq.cpp  StateValveSeq.h  ThrottleController.cpp  ThrottleController.h  ThrottleRanger.cpp  ThrottleRanger.h  ThrottleStateAbort.cpp  ThrottleStateAbort.h  ThrottleStateCalibrateValve.cpp  ThrottleStateCalibrateValve.h  ThrottleStateFlight.cpp  ThrottleStateFlight.h  ThrottleStateIdle.cpp  ThrottleStateIdle.h  ThrottleStateThrustSeq.cpp  ThrottleStateThrustSeq.h  ThrottleStateValveSeq.cpp  ThrottleStateValveSeq.h  ThrottleValve.h
clover/src/tvc/: CMakeLists.txt  TVCController.cpp  TVCController.h  TVCStateAbort.cpp  TVCStateAbort.h  TVCStateFlight.cpp  TVCStateFlight.h  TVCStateIdle.cpp  TVCStateIdle.h  TVCStateSeq.cpp  TVCStateSeq.h  TVCStateValveSeq.cpp  TVCStateValveSeq.h
clover/vnav/: CMakeLists.txt  README.md  VERSION  prj.conf
clover/vnav/src/: main.cpp  vn_hal.cpp  vn_hal.hpp
floyd/: CMakeLists.txt  README.md
floyd/src/: CMakeLists.txt  main.cpp
gnc/: CMakeLists.txt  Kconfig  prj.conf
gnc/lib/Adafruit_BusIO/: Adafruit_SPIDevice.cpp  Adafruit_SPIDevice.h
gnc/lib/Adafruit_Sensor/: Adafruit_Sensor.h
gnc/src/: CMakeLists.txt  encoder.cpp  encoder.h  flightcontrol.cpp  flightcontrol.h  hornet_tvc.cpp  hornet_tvc.h  imu.cpp  imu.h  log.csv  main.cpp  pts.cpp  pts.h  sequencer.cpp  sequencer.h  server.cpp  servotesting.cpp  throttle_valve.cpp  throttle_valve.h
gnc/src/util/: CMakeLists.txt  math.cpp  math.h  pid.cpp  pid.h
scripts/: MPrime_March5Round2.csv  build-dev-container-image.sh  client-new.py  client.py  clover_pb2.py  dev-container-init.sh  fake_telemetry.py  flow1data.csv  flow2data.csv  flow3data.csv  format-and-lint.sh  gen_lookup_table_1d.py  gen_lookup_table_2d.py  gen_mprime.py  gen_nist_tc_table.py  generate_lut.py  pyproject.toml  ruff.toml  seq_splitter.py  test_clover_api.py  watch_status.py
scripts/lut_data/: IspCEATable.csv  MPrimeApril25_Even_fuel.csv  MPrimeApril25_Even_fuel_1.5.csv  MPrimeApril25_Even_lox.csv  MPrimeApril25_Even_lox_1.5.csv  MPrimeApril25_Even_thrust_1.5.csv  MPrime_OF14_Apr28_Req_Fuel_Valve_deg.csv  MPrime_OF14_Apr28_Req_LOx_Valve_deg.csv  MPrime_OF14_Apr28_Target_Thrust_lbf.csv  alpha.csv  change_alpha_cmd.csv  fuel_valve_deg.csv  isp_cea.csv  lox_valve_deg.csv  mprime_fuel.csv  mprime_lox.csv  predicted_thrust.csv  target_thrust.csv  tc_k_type_table.txt  tc_k_type_v_to_deg_c_lut.csv  tc_t_type_table.txt  tc_t_type_v_to_deg_c_lut.csv  thrust_error.csv
scripts/new-clientui/: backend_server.py  clover.proto  clover_pb2.py  full_hw_test.py  mock_hardware.py  mock_server.py  sequences.txt  server_log.txt  test_valve.py  udp_test.py
scripts/new-clientui/frontend-ranger/: package.json  temp_dashboard_ref.tsx
tests/clover/: CMakeLists.txt  README.md  prj.conf  testcase.yaml
(+213 files in other folders)
