[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clickhouse-connect>=0.13.0",
    "grpcio-tools>=1.76.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotext>=5.3.2",
    "plotly>=6.4.0",
    "polars>=1.38.1",
    "prompt-toolkit>=3.0.52",
    "protobuf>=6.33.2",
    "pyarrow>=23.0.1",
    "rich>=14.2.0",
]
